manifests/app-services.yml
apiVersion: v1
kind: Service
metadata:
  name: details
spec:
  type: ClusterIP
  selector:
    app: details
  ports:
  - name: http
    port: 8002
    targetPort: 8002
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: notification
spec:
  type: ClusterIP
  selector:
    app: notification
  ports:
  - name: http
    port: 8001
    targetPort: 8001
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: performance
spec:
  type: ClusterIP
  selector:
    app: performance
  ports:
  - name: http
    port: 8003
    targetPort: 8003
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: reviews
spec:
  type: ClusterIP
  selector:
    app: reviews
  ports:
  - name: http
    port: 8004
    targetPort: 8004
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP
