manifests/details-ds.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: details-ds
spec:
  host: details
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
  subsets:
    - name: v1
      labels:
        version: v1
