manifests/details-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details-vs
spec:
  hosts:
    - details
  http:
    - match:
      - uri:
          prefix: "/details"
      route:
        - destination:
            port:
              number: 8002
            host: details
            subset: v1
          weight: 100
