manifests/frontend-ds.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-ds
spec:
  host: frontend
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
    # connectionPool:
    #   tcp:
    #     maxConnections: 1 # limit the connections to our services
    #   http:
    #     # defining the number of requests we'll keep on waiting if our service is busy
    #     http1MaxPendingRequests: 1
    #     # how many requests our service can handle per communication
    #     maxRequestsPerConnection: 1
  subsets:
    - name: v1
      labels:
        version: v1
