manifests/notification-ds.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: notification-ds
spec:
  host: notification
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
  subsets:
    - name: v1
      labels:
        version: v1
