manifests/performance-ds.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: performance-ds
spec:
  host: performance
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
  subsets:
    - name: v1
      labels:
        version: v1
